Lowercase repository name

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/blocks";
 
-<Meta title="Gamepad.css" />
+<Meta title="gamepad.css" />
 
 <div className="sb-container">
-    <iframe src="https://dxlliv.github.io/Gamepad.css/" />
+    <iframe src="https://dxlliv.github.io/gamepad.css/" />
 </div>
 
 <style>
